# fastapi-fin

./: .windsurfrules  pyproject.toml
fastapi_fin/: error.py  health.py  middleware.py  permission.py
fastapi_fin/helper/: __init__.py  jwt.py  oauth2.py  password.py
fastapi_fin/provider/: __init__.py  oauth2.py  oidc.py
