[project]
name = "fastapi-fin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kevinchueh", email = "kevinchueh@retailingdata.com.tw" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.11",
    "lilya>=0.12.10",
]

[project.scripts]
fastapi-fin = "fastapi_fin:main"

[build-system]
requires = ["flit_core>=3.9.0"]
build-backend = "flit_core.buildapi"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "flit>=3.11.0",
]
