[project]
name = "fastapi-fin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kevinchueh", email = "slime21023@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "itsdangerous>=2.2.0",
    "pwdlib[bcrypt]>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
